--- a/package.json
+++ b/package.json
@@ -9,8 +9,14 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@chakra-ui/react": "^2.6.1",
+    "@emotion/react": "^11.11.0",
+    "@emotion/styled": "^11.11.0",
+    "framer-motion": "^10.12.11",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-lazy": "^1.1.0",
+    "react-router-dom": "^6.11.1",
     "uuid": "^9.0.0"
   },
   "devDependencies": {
