--- a/package.json
+++ b/package.json
@@ -9,13 +9,17 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@chakra-ui/icons": "^2.0.19",
     "@chakra-ui/react": "^2.6.1",
     "@emotion/react": "^11.11.0",
     "@emotion/styled": "^11.11.0",
-    "framer-motion": "^10.12.11",
+    "bootstrap": "^5.3.0",
+    "framer-motion": "^10.12.12",
     "react": "^18.2.0",
+    "react-bootstrap": "^2.7.4",
     "react-dom": "^18.2.0",
     "react-lazy": "^1.1.0",
+    "react-modal": "^3.16.1",
     "react-router-dom": "^6.11.1",
     "uuid": "^9.0.0"
   },
